--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,11 @@
 # Authors
 
-Name Name:
-  name        : "Name Name"
+Vinicius:
+  name        : "Vinicius dos Santos"
   uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+  email       : "vinicius.dos.santos@icmc.usp.br"
+  bio         : "Software Engineering Researcher"
+  avatar      : "profile.jpeg"
+#  twitter     : "name"
+#  google_plus : "Name"
 
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
