--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
 
 main:
   - title: "Publications"
-    url: /publications/
+    url: publications/
 
 #  - title: "Talks"
 #    url: /talks/    
@@ -15,13 +15,13 @@ main:
 #    url: /teaching/    
     
   - title: "Portfolio"
-    url: /portfolio/
+    url: portfolio/
         
   - title: "Blog Posts"
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: cv/
     
 #  - title: "Guide"
 #    url: /markdown/
